objects/ManuClub_Client_Health_Info__c/fields/active_energy_burned_goal__c.field-meta.xml
<CustomField>
    <fullName>active_energy_burned_goal__c</fullName>
    <label>active_energy_burned_goal</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>