objects/ManuClub_Client_Health_Info__c/fields/Calories_Burnt__c.field-meta.xml
<CustomField>
    <fullName>Calories_Burnt__c</fullName>
    <label>Calories_Burnt</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>