objects/ManuClub_Client_Health_Info__c/fields/exercise_time_goal__c.field-meta.xml
<CustomField>
    <fullName>exercise_time_goal__c</fullName>
    <label>exercise_time_goal</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>