objects/ManuClub_Client_Health_Info__c/fields/Record_Date__c.field-meta.xml
<CustomField>
    <fullName>Record_Date__c</fullName>
    <label>Record_Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>