objects/ManuClub_Client_Health_Info__c/fields/stand_hours__c.field-meta.xml
<CustomField>
    <fullName>stand_hours__c</fullName>
    <label>stand_hours</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>