objects/ManuClub_Client_Health_Info__c/fields/Steps__c.field-meta.xml
<CustomField>
    <fullName>Steps__c</fullName>
    <label>Steps</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>